--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -21,8 +21,7 @@ nav {
   padding-top: 15px;
   margin-right: 20px;
   float: right;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  /* font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif; */
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 20px;
 }
 
